--- a/FrontEnd/src/containers/JasonContainer/JasonContainer.css
+++ b/FrontEnd/src/containers/JasonContainer/JasonContainer.css
@@ -1,7 +1,7 @@
 .btn-group button {
-    background-color: #4CAF50; /* Green background */
-    border: 1px solid green; /* Green border */
-    color: white; /* White text */
+    background-color: white; /* Green background */
+    border: 1px solid #2e2e2f; /* Green border */
+    color: black; /* White text */
     padding: 10px 24px; /* Some padding */
     cursor: pointer; /* Pointer/hand icon */
     float: left; /* Float the buttons side by side */
@@ -20,5 +20,10 @@
 
 /* Add a background color on hover */
 .btn-group button:hover {
-    background-color: #3e8e41;
+    background-color: #2e2e2f;
+}
+.Jason{
+    position: fixed;
+    top: 50px; 
+    right: 10px; 
 }
