--- a/FrontEnd/src/App.css
+++ b/FrontEnd/src/App.css
@@ -8,7 +8,7 @@
 }
 
 .App-header {
-  background: #282c34;
+  background: white;
   min-height: 100vh;
   margin: 0 auto 0 auto;  
   width:100%; 
@@ -37,9 +37,13 @@
   width:50%;
   text-align: center;
   border-radius:6px;
-  margin: 0 auto 0 auto;
+  margin: 10px auto 0 auto;
   padding:0px 0px 70px 0px;
   border: #282c34 4px solid; 
+  position: relative; 
+  display:flex;    
+  align-items:center;
+
 }
 
 .email{
@@ -52,6 +56,7 @@
   float: left;
   font-size:1em;
   border-radius:4px;
+  
 }
 .btn{
   background:#2ecc71;
@@ -68,6 +73,7 @@
   font-weight:800;
   font-size:0.8em;
   align-self: auto;
+  
 }
 
 .btn:hover{
@@ -93,6 +99,15 @@
 #btn2:hover{ 
 background:#3594D2; 
 }
-.lab{
-  float: left;
+
+.StockHead{
+  background: #2e2e2f;
+  color: white; 
+  font-style: italic;
+  font-weight: bold; 
+  font-size: 30px; 
+}
+.LeaderBoard{
+  display: inline-block;
+  position: relative; 
 }
