--- a/FrontEnd/src/components/User/User.css
+++ b/FrontEnd/src/components/User/User.css
@@ -1,7 +1,7 @@
 .UserHead{
     display: block;
     margin-bottom: 4px;
-    color: #6a6a6c;
+    color: #2e2e2f;
     font-size: .64286rem;
     font-weight: 400;
     letter-spacing: .025em;
