--- a/FrontEnd/src/containers/Portfolio/Portfolio.css
+++ b/FrontEnd/src/containers/Portfolio/Portfolio.css
@@ -4,7 +4,8 @@ text-align: left;
 margin-right: auto;
 margin-top: 2px;
 justify-content: flex-start;
-font-weight: 700;}
+font-weight: 700;
+height: 50px;}
 .TableH{
     padding: 0 0 6px 5px;
     font-weight: 600;
