--- a/FrontEnd/src/App.css
+++ b/FrontEnd/src/App.css
@@ -45,7 +45,40 @@
   align-items:center;
 
 }
+.delBar {
 
+  position: fixed;
+  bottom: 0;
+  right: 0;
+
+}
+.box2 {
+
+  background-color:white;
+  width:100%;
+  text-align: center;
+  border-radius:6px;
+  margin: 5px auto 0 auto;
+  padding:0px 0px 0px 0px;
+  border: #282c34 4px solid;
+  position: relative;
+  display:flex;
+  align-items:center;
+
+}
+
+.email2 {
+  background:#ecf0f1;
+  border: #ccc 1px solid;
+  border-bottom: #ccc 2px solid;
+  padding: 8px;
+  width:250px;
+  color:#AAAAAA;
+  float: left;
+  font-size:1em;
+  border-radius:2px;
+  
+}
 .email {
   background:#ecf0f1;
   border: #ccc 1px solid;
@@ -56,7 +89,7 @@
   float: left;
   font-size:1em;
   border-radius:4px;
-  
+
 }
 .btn{
   background:#2ecc71;
