--- a/FrontEnd/src/App.css
+++ b/FrontEnd/src/App.css
@@ -108,6 +108,26 @@
   align-self: auto;
   
 }
+.btn3{
+  background:#2ecc71;
+  width:125px;
+  padding-top:5px;
+  padding-bottom:5px;
+  color:white;
+  border-radius:4px;
+  border: #27ae60 1px solid;
+  margin-top:20px;
+  margin-bottom:20px;
+  float:left;
+  margin-left:16px;
+  font-weight:800;
+  font-size:0.8em;
+  align-self: auto;
+  position: absolute;
+  right:    0;
+  bottom:   0;
+
+}
 
 .btn:hover{
   background:#2CC06B; 
