--- a/FrontEnd/src/components/Stock/Stock.css
+++ b/FrontEnd/src/components/Stock/Stock.css
@@ -8,3 +8,13 @@ li{
     display:flex;    
     align-items:center;
 }
+
+.green {
+    font-size: 10px;
+    color: green;
+}
+
+.red {
+    font-size: 10px;
+    color: red;
+}
