--- a/FrontEnd/src/containers/stockList/StockList.css
+++ b/FrontEnd/src/containers/stockList/StockList.css
@@ -2,3 +2,29 @@
     margin-left: auto;
     margin-right: auto;
 }
+
+td {
+    padding: 8px;
+    text-align: left;
+}
+
+th {
+    padding: 10px;
+    background-color: #4CAF50;
+    color: white;
+}
+
+thead, tbody { 
+    display: block;
+    text-align: center;
+}
+
+tbody {
+    height: 650px;       /* Just for the demo          */
+    overflow-y: auto;    /* Trigger vertical scroll    */
+    overflow-x: hidden;  /* Hide the horizontal scroll */
+}
+
+tr:nth-child(even) {background-color: #f2f2f2;}
+
+tr:hover {background-color: #f5f5f5;}
