--- a/FrontEnd/src/containers/Portfolio/Portfolio.css
+++ b/FrontEnd/src/containers/Portfolio/Portfolio.css
@@ -19,3 +19,35 @@ height: 50px;}
     display:flex;    
     align-items:center;
 }
+
+.StockList{
+    margin-left: auto;
+    margin-right: auto;
+}
+
+td {
+    padding: 8px;
+    text-align: left;
+}
+
+th {
+    padding: 10px;
+    background-color: #4CAF50;
+    color: white;
+    font-size: 15px;
+}
+
+thead, tbody { 
+    display: block;
+    text-align: center;
+}
+
+tbody {
+    height: 650px;       /* Just for the demo          */
+    overflow-y: auto;    /* Trigger vertical scroll    */
+    overflow-x: hidden;  /* Hide the horizontal scroll */
+}
+
+tr:nth-child(even) {background-color: #f2f2f2;}
+
+tr:hover {background-color: #f5f5f5;}
